--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,6 @@ __pycache__
 *.pyd
 /*.123share
 /*.json
-/uploads/*
 *test*
-/public/check/*.123share
 PRIVATE_KEY.md
-# /public/ok/*.123share
-# /public/ok/*.zip
+/export
