🧪 实验性：全局 logger

--- a/settings.yaml
+++ b/settings.yaml
@@ -18,5 +18,6 @@ ADMIN_PASSWORD: "123456"
 # 密钥, 用于加密 cookies, 如果你要部署本网站, 并且开放给其他用户使用, 请务必修改
 SECRET_KEY: "114514"
 
-# 是否开启调试模式 (保持不动即可)
-DEBUG: false
+# 日志级别: DEBUG, INFO, WARNING, ERROR, CRITICAL
+LOG_DIR: "./logs"
+LOGGING_LEVEL: "DEBUG"
