--- a/settings.yaml
+++ b/settings.yaml
@@ -18,6 +18,9 @@ ADMIN_PASSWORD: "123456"
 # 密钥, 用于加密 cookies, 如果你要部署本网站, 并且开放给其他用户使用, 请务必修改
 SECRET_KEY: "114514"
 
-# 日志级别: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# 日志保存目录, 一般不动
 LOG_DIR: "./logs"
-LOGGING_LEVEL: "INFO"
+# 日志级别: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# 如果你想正常使用, 建议使用 WARNING
+# 如果你想反馈 bug, 使用 DEBUG
+LOGGING_LEVEL: "WARNING"
