--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,61 @@
 services:
-  pan_share_app:
-    build:
-      context: . 
-      dockerfile_inline: |
-        # 选取python:3.13.4镜像
-        FROM python:3.13.4
-
-        # 安装git用于克隆代码
-        RUN apt-get update && apt-get install -y git && rm -rf /var/lib/apt/lists/*
-
-        # 设置工作目录
-        WORKDIR /app
-
-        # 从GitHub克隆最新版本的代码到 /app/123Pan-Unlimited-Share
-        RUN git clone https://github.com/realcwj/123Pan-Unlimited-Share.git
-
-        # 设置工作目录到项目根目录
-        WORKDIR /app/123Pan-Unlimited-Share
-
-        # 安装项目里的 requirements.txt
-        RUN echo "INFO: Installing requirements from requirements.txt..." && \
-            pip install --no-cache-dir -r requirements.txt
-
-        # 安装 gunicorn
-        RUN echo "INFO: Installing gunicorn..." && \
-            pip install --no-cache-dir gunicorn
-
-        # 创建日志目录（这里确保目录存在于镜像内）
-        RUN mkdir -p logs
-
-        # EXPOSE 指令声明容器打算监听的端口，主要是文档作用
-        # 实际绑定的端口由 settings.yaml 决定
-        EXPOSE 33333
-
-        # 基于项目里 gunicorn.conf.py 配置文件启动 flask 项目
-        CMD ["gunicorn", "-c", "gunicorn.conf.py", "web:app"]
-
-    image: pan123
+  pan123:
+    image: python:3.13.4
     container_name: pan123
     ports:
-      - "33333:33333" # 主机外部端口:容器内部端口
+      # 主机外部端口:容器内部端口
+      - "33333:33333"
     volumes:
-      # 映射项目内的123Pan-Unlimited-Share/logs目录到外部/DOCKER/123Pan-Unlimited-Share目录
-      - /DOCKER/123Pan-Unlimited-Share:/app/123Pan-Unlimited-Share/logs
-      # 映射你自己的配置文件，注意修改成你主机上的路径
-      - /DOCKER/123Pan-Unlimited-Share/settings.yaml:/app/123Pan-Unlimited-Share/settings.yaml:ro
+      # 映射主机上的日志目录到容器内
+      # 请确保 /DOCKER/123Pan-Unlimited-Share/logs 目录在主机上存在
+      - /DOCKER/123Pan-Unlimited-Share/logs:/app/external/logs
+      # 映射自己的配置文件
+      # 请确保 /DOCKER/123Pan-Unlimited-Share/settings.yaml 文件在主机上存在
+      - /DOCKER/123Pan-Unlimited-Share/settings.yaml:/app/external/settings.yaml:ro
+      # 映射自己的数据库文件
+      - /DOCKER/123Pan-Unlimited-Share/PAN123DATABASE.db:/app/external/PAN123DATABASE.db
     restart: unless-stopped
     environment:
       - PYTHONUNBUFFERED=1
       - TZ=Asia/Shanghai
+    working_dir: /app
+    command: >
+      sh -c "
+        set -e &&
+        echo 'INFO: Updating package list and installing git and wget...' &&
+        apt-get update && apt-get install -y git wget && rm -rf /var/lib/apt/lists/* &&
+        
+        echo 'INFO: Managing source code repository in /app/source...' &&
+        if [ -d 'source/.git' ]; then
+          echo 'INFO: Repository exists. Pulling latest changes...' &&
+          cd source && git pull && cd .. ;
+        else
+          if [ -d 'source' ]; then
+            echo 'INFO: Removing incomplete source directory...' &&
+            rm -rf source ;
+          fi
+          echo 'INFO: Cloning repository into ./source...' &&
+          git clone https://ghfast.top/https://github.com/realcwj/123Pan-Unlimited-Share.git source ;
+        fi &&
+        
+        cd source &&
+        
+        echo 'INFO: Linking persistent config and logs into the source directory...' &&
+
+        ln -sf /app/external/settings.yaml settings.yaml &&
+        ln -sf /app/external/logs logs &&
+        ln -sf /app/external/PAN123DATABASE.db assets/PAN123DATABASE.db &&
+        
+        echo 'INFO: Installing requirements from requirements.txt...' &&
+        pip install --no-cache-dir -r requirements.txt &&
+        
+        echo 'INFO: Installing gunicorn...' &&
+        pip install --no-cache-dir gunicorn &&
+        
+        echo 'INFO: Creating assets directory if it does not exist...' &&
+        mkdir -p assets &&
+
+        echo 'INFO: Starting Gunicorn server...' &&
+
+        exec gunicorn -c gunicorn.conf.py web:app
+      "
